<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Untold Stories</string>
    <string name="hello_world">Untold Stories</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="email_user">Email</string>
    <string name="password_user">Password</string>
    <string name="login_user">Log in</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="name_signup">Name</string>
    <string name="birthdate">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="attach">Attach</string>
    <string name="attach_user">Partner\'s Email</string>
    <string name="dialogTitle">Attaching Profile</string>
    <string name="dialogMessage">Your partner, (email) had requested to join profile. Join?</string>
    <string name="accept">Yes</string>
    <string name="reject">No</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_attach">Attach with Partner</string>
    <string name="title_activity_base">Main Page</string>
    <string name="news_feed_fragment">news feed fragment stub</string>
    <string name="set_anniversary">Set Anniversary Date</string>
    <string name="save">Save</string>
    <string name="user_name1">(NAME1)</string>
    <string name="user_name2">(NAME2)</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="drawer_selections">
        <item>News Feed</item>
        <item>Our Profile</item>
        <item>DreamBoard</item>
        <item>Settings</item>
    </string-array>

    <string name="profile_fragment">Profile fragment stub</string>
    <string name="dreamboard_fragment">DreamBoard fragment stub</string>

</resources>
