<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE"
    tools:context="com.untoldstories.signup.SignupActivity">

    <include android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <ScrollView
        android:layout_below="@id/app_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/user_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/default_profile"
                app:border_color="#000000"
                app:border_width="0.8dp" />


            <RelativeLayout
                android:id="@+id/fields_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_image"
                android:layout_marginTop="18dp"
                android:background="@drawable/white_layout_bg">

                <EditText
                    android:id="@+id/name_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="18dp"
                    android:hint="@string/name_signup"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_signup"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="18dp"
                    android:hint="@string/email_user"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_signup"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="18dp"
                    android:hint="@string/password_user"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_signup"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/gender"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/gender_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_signup"
                    android:layout_marginLeft="86dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="18dp" />

                <Button
                    android:id="@+id/birthday_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gender_signup"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:onClick="setDOB"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/birthdate" />

            </RelativeLayout>

            <Button
                style="@style/login_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/fields_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="22dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bluepurple_button"
                android:onClick="signUpNow"
                android:text="@string/sign_up" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>