<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:id="@+id/fields_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_image"
                android:background="@drawable/white_layout_bg">


                <TextView
                    android:id="@+id/dialogTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="18dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/dialogTitle"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/dialogMessage"
                    android:layout_below="@+id/dialogTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="18dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/dialogMessage"
                    android:textSize="20sp" />

                <Button
                    style="@style/login_button"
                    android:id="@+id/accept"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dialogMessage"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="22dp"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/bluepurple_button"
                    android:text="@string/accept" />

                <Button
                    style="@style/login_button"
                    android:id="@+id/reject"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dialogMessage"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="22dp"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/bluepurple_button"
                    android:text="@string/reject" />

            </RelativeLayout>

        </RelativeLayout>
</RelativeLayout>