<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context="com.untoldstories.signup.AttachActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/user_image_attach"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:clickable="false"
                android:src="@drawable/ic_new_content_dark"
                app:border_color="#000000"
                app:border_width="0.8dp" />


            <RelativeLayout
                android:id="@+id/fields_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_image_attach"
                android:layout_marginTop="18dp"
                android:background="@drawable/white_layout_bg">

                <EditText
                    android:id="@+id/name_attach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="18dp"
                    android:editable="false"
                    android:hint="@string/name_signup"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/email_attach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_attach"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="18dp"
                    android:editable="false"
                    android:hint="@string/email_user"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password_attach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_attach"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="18dp"
                    android:editable="false"
                    android:hint="@string/password_user"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_attach"
                    android:layout_marginLeft="22dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/gender"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/gender_attach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_attach"
                    android:layout_marginLeft="86dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="18dp"
                    android:clickable="false" />

                <Button
                    android:id="@+id/birthday_attach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gender_attach"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:clickable="false"
                    android:enabled="false"
                    android:onClick="setDOB"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/birthdate" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fields_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fields_layout"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/white_layout_bg"
                android:gravity="center">

                <EditText
                    android:id="@+id/attach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/attach_user"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:singleLine="true"
                    android:layout_toLeftOf="@+id/attach_button"
                    android:layout_toStartOf="@+id/attach_button"/>

                <Button
                    android:id="@+id/attach_button"
                    style="@style/login_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/bluepurple_button"
                    android:onClick="attachNow"
                    android:text="@string/attach"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>